add new website from server na

--- a/xem-phim-bo/yeu-em-tu-da-day/index.html
+++ b/xem-phim-bo/yeu-em-tu-da-day/index.html
@@ -1189,7 +1189,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             7
+             8
             </dd>
             <br/>
            </dl>
@@ -1681,84 +1681,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/biet-doi-san-ma" title="Biệt đội săn ma">
+          <a class="list-top-movie-link" href="/phim-moi/hoang-de-prithviraj" title="Hoàng Đế Prithviraj">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/biet-doi-san-ma-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoang-de-prithviraj-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Biệt đội săn ma
+             Hoàng Đế Prithviraj
             </span>
             <span class="list-top-movie-item-en">
-             Ghostbusters
-            </span>
-            <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/wentworth-phan-4" title="Wentworth (Phần 4)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/wentworth-phan-4-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Wentworth (Phần 4)
-            </span>
-            <span class="list-top-movie-item-en">
-             Wentworth (Season 4)
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/phap-y-tam-linh" title="Pháp Y Tâm Linh">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phap-y-tam-linh-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Pháp Y Tâm Linh
-            </span>
-            <span class="list-top-movie-item-en">
-             The Listener
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cong-chua-giai-uu" title="Công Chúa Giải Ưu">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cong-chua-giai-uu-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Công Chúa Giải Ưu
-            </span>
-            <span class="list-top-movie-item-en">
-             Princess Jieyou
+             Samrat Prithviraj
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1769,21 +1703,87 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/my-nhan-dai-chien-2" title="Mỹ Nhân Đại Chiến 2">
+          <a class="list-top-movie-link" href="/phim-moi/cuoc-phieu-luu-ky-thu-cua-jojo" title="Cuộc phiêu lưu kỳ thú của JOJO">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/my-nhan-dai-chien-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-phieu-luu-ky-thu-cua-jojo-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Mỹ Nhân Đại Chiến 2
+             Cuộc phiêu lưu kỳ thú của JOJO
             </span>
             <span class="list-top-movie-item-en">
-             My Lucky Star
+             ジョジョの奇妙な冒険
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/toi-yeu-co-nang-ngoc-nghech" title="Tôi Yêu Cô Nàng Ngốc Nghếch">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/toi-yeu-co-nang-ngoc-nghech-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tôi Yêu Cô Nàng Ngốc Nghếch
+            </span>
+            <span class="list-top-movie-item-en">
+             Ugly Duckling Series 1
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/minh-tri-co-ai" title="Minh Tri Cố Ái">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/minh-tri-co-ai-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Minh Tri Cố Ái
+            </span>
+            <span class="list-top-movie-item-en">
+             First Choice
+            </span>
+            <span class="list-top-movie-item-view">
+             5 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/dead-mine" title="Dead Mine">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dead-mine-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Dead Mine
+            </span>
+            <span class="list-top-movie-item-en">
+             Dead Mine
+            </span>
+            <span class="list-top-movie-item-view">
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
