add new website from server na

--- a/xem-phim-moi/ke-trom-mat-trang/index.html
+++ b/xem-phim-moi/ke-trom-mat-trang/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1690,40 +1690,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hercai" title="Hercai">
+          <a class="list-top-movie-link" href="/phim-moi/zone-414" title="Zone 414">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hercai-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/zone-414-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hercai
+             Zone 414
             </span>
             <span class="list-top-movie-item-en">
-             Hercai
-            </span>
-            <span class="list-top-movie-item-view">
-             0 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ngoi-nha-nao-nhiet-ban-dien-anh" title="Ngôi nhà náo nhiệt – Bản điện ảnh">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngoi-nha-nao-nhiet-ban-dien-anh-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Ngôi nhà náo nhiệt – Bản điện ảnh
-            </span>
-            <span class="list-top-movie-item-en">
-             The Loud House Movie
+             Zone 414
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1734,40 +1712,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/doi-dac-cong-nhanh-nhen" title="Đội đặc công nhanh nhẹn">
+          <a class="list-top-movie-link" href="/phim-moi/bong-dem" title="Bóng Đêm">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doi-dac-cong-nhanh-nhen-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bong-dem-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đội đặc công nhanh nhẹn
+             Bóng Đêm
             </span>
             <span class="list-top-movie-item-en">
-             Shining Force
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/true-nhung-cau-chuyen-nhiem-mau" title="True: Những câu chuyện nhiệm màu">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/true-nhung-cau-chuyen-nhiem-mau-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             True: Những câu chuyện nhiệm màu
-            </span>
-            <span class="list-top-movie-item-en">
-             True: Terrific Tales
+             The Darkness
             </span>
             <span class="list-top-movie-item-view">
              4 lượt xem
@@ -1778,21 +1734,65 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/can-choi-giua-rung" title="Căn Chòi Giữa Rừng">
+          <a class="list-top-movie-link" href="/phim-moi/uoc-minh-cung-bay" title="Ước Mình Cùng Bay">
            <span class="status">
-            HD Thuyết Minh
+            HD Việt Nam
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/can-choi-giua-rung-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/uoc-minh-cung-bay-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Căn Chòi Giữa Rừng
+             Ước Mình Cùng Bay
             </span>
             <span class="list-top-movie-item-en">
-             The Cabin In The Woods
+             Ước Mình Cùng Bay
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/paris-toc-hanh" title="Paris Tốc Hành">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/paris-toc-hanh-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Paris Tốc Hành
+            </span>
+            <span class="list-top-movie-item-en">
+             Coursier
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/bang-vu-hoa" title="Băng Vũ Hỏa">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bang-vu-hoa-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Băng Vũ Hỏa
+            </span>
+            <span class="list-top-movie-item-en">
+             Being A Hero
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
