add new website from server na

--- a/xem-phim-moi/vung-dat-cam-lang-ngay-mot/index.html
+++ b/xem-phim-moi/vung-dat-cam-lang-ngay-mot/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1785,62 +1785,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuop-bien-vung-caribbe-phan-3-noi-tan-cung-the-gioi" title="Cướp biển vùng Caribbe (Phần 3): Nơi Tận Cùng Thế Giới">
+          <a class="list-top-movie-link" href="/phim-moi/xuyen-khong-cai-menh-gia-toc" title="Xuyên Không Cải Mệnh Gia Tộc">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuop-bien-vung-caribbe-phan-3-noi-tan-cung-the-gioi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xuyen-khong-cai-menh-gia-toc-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cướp biển vùng Caribbe (Phần 3): Nơi Tận Cùng Thế Giới
+             Xuyên Không Cải Mệnh Gia Tộc
             </span>
             <span class="list-top-movie-item-en">
-             Pirates of the Caribbean: At World's End
-            </span>
-            <span class="list-top-movie-item-view">
-             5 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/little-forest-summer-autumn" title="Little Forest: Summer/Autumn">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/little-forest-summerautumn-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Little Forest: Summer/Autumn
-            </span>
-            <span class="list-top-movie-item-en">
-             Little Forest: Summer/Autumn
-            </span>
-            <span class="list-top-movie-item-view">
-             0 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/con-duong-nhan-sinh-nhan-sinh-lo-dao" title="Con Đường Nhân Sinh (Nhân Sinh Lộ Dao)">
-           <span class="status">
-            FHD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/con-duong-nhan-sinh-nhan-sinh-lo-dao-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Con Đường Nhân Sinh (Nhân Sinh Lộ Dao)
-            </span>
-            <span class="list-top-movie-item-en">
-             Miles to Go
+             Chinatown Cha Cha
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1851,18 +1807,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/angry-birds-ban-dien-anh" title="Angry Birds (Bản điện ảnh)">
+          <a class="list-top-movie-link" href="/phim-moi/kyra-va-the-gioi-phep-thuat" title="Kyra và thế giới phép thuật">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/angry-birds-ban-dien-anh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/kyra-va-the-gioi-phep-thuat-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Angry Birds (Bản điện ảnh)
+             Kyra và thế giới phép thuật
             </span>
             <span class="list-top-movie-item-en">
-             The Angry Birds Movie
+             The Bureau of Magical Things
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1873,18 +1829,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thien-hanh-kien" title="Thiên Hành Kiện">
+          <a class="list-top-movie-link" href="/phim-moi/ba-chang-linh-ngu-lam-dartagnan" title="Ba Chàng Lính Ngự Lâm: D’Artagnan">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thien-hanh-kien-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ba-chang-linh-ngu-lam-dartagnan-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thiên Hành Kiện
+             Ba Chàng Lính Ngự Lâm: D’Artagnan
             </span>
             <span class="list-top-movie-item-en">
-             Heroes
+             The Three Musketeers: D'Artagnan
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/tieng-goi-con-tim-2" title="Tiếng Gọi Con Tim 2">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tieng-goi-con-tim-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tiếng Gọi Con Tim 2
+            </span>
+            <span class="list-top-movie-item-en">
+             The Sound of Your Heart: Season 2
+            </span>
+            <span class="list-top-movie-item-view">
+             7 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/tiffany-haddish-black-mitzvah" title="Tiffany Haddish: Black Mitzvah">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tiffany-haddish-black-mitzvah-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tiffany Haddish: Black Mitzvah
+            </span>
+            <span class="list-top-movie-item-en">
+             Tiffany Haddish: Black Mitzvah
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
