add new website from server na

--- a/xem-phim-bo/dau-gau-ngot-ngao/index.html
+++ b/xem-phim-bo/dau-gau-ngot-ngao/index.html
@@ -1183,7 +1183,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1653,21 +1653,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/co-vi" title="Cô vị">
+          <a class="list-top-movie-link" href="/phim-moi/thay-dan-du-nhan-toi" title="Thầy dẫn dụ nhận tội">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-vi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thay-dan-du-nhan-toi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cô vị
+             Thầy dẫn dụ nhận tội
             </span>
             <span class="list-top-movie-item-en">
-             Little Big Women
+             Finding the Murderer
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1675,18 +1675,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cung-nhau-hit-tho-sau" title="Cùng Nhau Hít Thở Sâu">
+          <a class="list-top-movie-link" href="/phim-moi/amsterdam-vu-an-mang-ky-bi" title="Amsterdam: Vụ Án Mạng Kỳ Bí">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cung-nhau-hit-tho-sau-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/amsterdam-vu-an-mang-ky-bi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cùng Nhau Hít Thở Sâu
+             Amsterdam: Vụ Án Mạng Kỳ Bí
             </span>
             <span class="list-top-movie-item-en">
-             Breath of Destiny
+             Amsterdam
             </span>
             <span class="list-top-movie-item-view">
              4 lượt xem
@@ -1697,18 +1697,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/to-end-all-war-oppenheimer-the-atomic-bomb" title="To End All War: Oppenheimer &amp; the Atomic Bomb">
+          <a class="list-top-movie-link" href="/phim-moi/ngach-do-hanh-phuc" title="Ngạch Độ Hạnh Phúc">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/to-end-all-war-oppenheimer-and-the-atomic-bomb-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngach-do-hanh-phuc-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             To End All War: Oppenheimer &amp; the Atomic Bomb
+             Ngạch Độ Hạnh Phúc
             </span>
             <span class="list-top-movie-item-en">
-             To End All War: Oppenheimer &amp; the Atomic Bomb
+             Love on Credit
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1719,21 +1719,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hay-goi-cho-saul-phan-4" title="Hãy gọi cho Saul (Phần 4)">
+          <a class="list-top-movie-link" href="/phim-moi/thieu-chien-tinh-anh-bao-tang-cua-ong-noi" title="Thiếu chiến tinh anh: Bảo tàng của ông nội">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hay-goi-cho-saul-phan-4-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thieu-chien-tinh-anh-bao-tang-cua-ong-noi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hãy gọi cho Saul (Phần 4)
+             Thiếu chiến tinh anh: Bảo tàng của ông nội
             </span>
             <span class="list-top-movie-item-en">
-             Better Call Saul (Season 4)
+             Grandpa''s Treasure
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1741,21 +1741,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/natalie" title="Natalie">
+          <a class="list-top-movie-link" href="/phim-moi/vip-tinh-yeu-giau-kin" title="VIP – Tình yêu giấu kín">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/natalie-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vip-tinh-yeu-giau-kin-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Natalie
+             VIP – Tình yêu giấu kín
             </span>
             <span class="list-top-movie-item-en">
-             Natalie
+             V.I.P
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
