add new website from server na

--- a/xem-phim-moi/vay-ham-tren-khong/index.html
+++ b/xem-phim-moi/vay-ham-tren-khong/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1781,21 +1781,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chien-binh-the-ky" title="Chiến Binh Thế Kỷ">
+          <a class="list-top-movie-link" href="/phim-moi/dong-pha-gia-su" title="Đông Pha Gia Sự">
            <span class="status">
-            HD Vietsub
+            HD Lồng Tiếng
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chien-binh-the-ky-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dong-pha-gia-su-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chiến Binh Thế Kỷ
+             Đông Pha Gia Sự
             </span>
             <span class="list-top-movie-item-en">
-             Solomon Kane
+             Văn Hào Tô Đông Pha
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1803,21 +1803,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chung-ta-chua-tung" title="Chúng Ta Chưa Từng">
+          <a class="list-top-movie-link" href="/phim-moi/nhung-co-nang-nam-1979" title="Những Cô Nàng Năm 1979">
            <span class="status">
-            HD Thuyết Minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chung-ta-chua-tung-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-co-nang-nam-1979-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chúng Ta Chưa Từng
+             Những Cô Nàng Năm 1979
             </span>
             <span class="list-top-movie-item-en">
-             The Way We Weren't
+             Girls' Generation 1979
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1825,18 +1825,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/xac-song-phan-3" title="Xác Sống (Phần 3)">
+          <a class="list-top-movie-link" href="/phim-moi/mai-am-cua-meo-chi" title="Mái Ấm Của Mèo Chi">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xac-song-phan-3-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mai-am-cua-meo-chi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Xác Sống (Phần 3)
+             Mái Ấm Của Mèo Chi
             </span>
             <span class="list-top-movie-item-en">
-             The Walking Dead (Season 3)
+             Chi's Sweet Home
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1847,21 +1847,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bi-an-vung-ngoai-o" title="Bí Ẩn Vùng Ngoại Ô">
+          <a class="list-top-movie-link" href="/phim-moi/xac-song-phan-7" title="Xác Sống (Phần 7)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bi-an-vung-ngoai-o-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xac-song-phan-7-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bí Ẩn Vùng Ngoại Ô
+             Xác Sống (Phần 7)
             </span>
             <span class="list-top-movie-item-en">
-             Suburbicon
+             The Walking Dead (Season 7)
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1869,21 +1869,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/xu-so-cac-nguyen-to" title="Xứ Sở Các Nguyên Tố">
+          <a class="list-top-movie-link" href="/phim-moi/mat-day-phan-8" title="Mặt Dày (Phần 8)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xu-so-cac-nguyen-to-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mat-day-phan-8-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Xứ Sở Các Nguyên Tố
+             Mặt Dày (Phần 8)
             </span>
             <span class="list-top-movie-item-en">
-             Elemental
+             Shameless (Season 8)
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             5 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
